# sdl_basic_2d

./: CMakeLists.txt  README.md  clear
include/: cross_zero.hpp  player.hpp  window_manager.hpp
res/: res.xml
src/: main.cpp  window_manager.cpp
vsprojects/: sdl_basic_2d.sln  sdl_basic_2d.vcxproj  sdl_basic_2d.vcxproj.filters
