
CMAKE_MINIMUM_REQUIRED( VERSION 2.6 FATAL_ERROR )

PROJECT( x_proj )

SET( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )
INCLUDE( CheckIncludeFiles )

# Настройка компилятора.
SET( CMAKE_CCXX_FLAGS "${CMAKE_CCXX_FLAGS} -pedantic -finline-functions -fno-strict-aliasing -std=c++11 " )
SET( CMAKE_CCXX_FLAGS "${CMAKE_CCXX_FLAGS} -g" )

if(DEBUG)
	SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__DEBUG__" )
endif(DEBUG)

if(PROFILE)
	SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg" )
endif(PROFILE)

MACRO( SET_FLAGS ADDITIONAL_CXX_FLAGS )
	SET( CMAKE_CXX_FLAGS "${CMAKE_CCXX_FLAGS} ${ADDITIONAL_CXX_FLAGS}" )
	SET( CMAKE_C_FLAGS   "${CMAKE_CCXX_FLAGS} ${ADDITIONAL_CXX_FLAGS}" )
ENDMACRO( SET_FLAGS )

SET_FLAGS( "-Wall" )

INCLUDE_DIRECTORIES( include )

FILE( REMOVE         ${CMAKE_BINARY_DIR}/build )
FILE( MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/build )

FILE(GLOB PROJ_SRC src/*.cpp)
FILE(GLOB 3RD_SRC 3rd/tinyxml/*.cpp)
ADD_EXECUTABLE( build/x_proj ${PROJ_SRC} ${3RD_SRC} )
TARGET_LINK_LIBRARIES( build/x_proj SDL SDL_image)
